tests/badinc5.out
./badinc5.mak:3:2: error: Couldn't open file "nosuchfile.dat"
 #nosuchfile.dat,
  ^~~~~~~~~~~~~~

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...
./badinc5.mak:4: warning: Unused fixed point "GX1"

Calculating statistics...

Survey contains 4 survey stations, joined by 2 legs.
There are 0 loops.
Survey has 2 connected components.
Total length of survey legs =    2.39m (   2.39m adjusted)
Total plan length of survey legs =    2.29m
Total vertical length of survey legs =    0.52m
Vertical range = 0.52m (from D1 at 1235.08m to C2 at 1234.56m)
North-South range = 2.15m (from D1 at 22.62m to C1 at 20.47m)
East-West range = 0.59m (from D1 at 10.82m to C2 at 10.23m)
   1 0-node.
   2 1-nodes.
   1 2-node.
There were 1 warning(s) and 1 error(s) - no output files produced.
